// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emptyInlineRecord.res 1`] = `
"=====Parsetree==========================================
type nonrec 'a node =
  | Nil 
  | Node of {
  } 
=====Errors=============================================

  Syntax error!
  parsing/errors/typeDef/emptyInlineRecord.res 3:10-11  
  1 │ type node<'a> =
  2 │   | Nil
  3 │   | Node({})
  4 │ 
  
  An inline record declaration needs at least one field


========================================================"
`;

exports[`emptyRecord.js 1`] = `
"=====Parsetree==========================================
type nonrec record = {
  }
=====Errors=============================================

  Syntax error!
  parsing/errors/typeDef/emptyRecord.js 1:15-16  
  1 │ type record = {}
  2 │ 
  
  A record needs at least one field


========================================================"
`;

exports[`namedParameters.js 1`] = `
"=====Parsetree==========================================
type nonrec draw = stroke:pencil -> unit
=====Errors=============================================

  Syntax error!
  parsing/errors/typeDef/namedParameters.js 1:15-20  
  1 │ type  draw = (stroke: pencil) => unit
  2 │ 
  
  Parameter names start with a \`~\`, like: ~stroke


========================================================"
`;

exports[`polyvariant.js 1`] = `
"=====Parsetree==========================================
type nonrec t = [< [%napkinscript.typehole ]]
type nonrec t = [ s | [%napkinscript.typehole ]]
type nonrec z = [< \`A  | \`B ]
type t = [ [%napkinscript.typehole ] | [%napkinscript.typehole ]]
=====Errors=============================================

  Syntax error!
  parsing/errors/typeDef/polyvariant.js 1:13  
  1 │ type t = [< ]
  2 │ 
  3 │ type t = [ s ]
  
  I'm not sure what to parse here when looking at \\"]\\".

  Syntax error!
  parsing/errors/typeDef/polyvariant.js 3:13-14  
  1 │ type t = [< ]
  2 │ 
  3 │ type t = [ s ]
  4 │ 
  5 │ type z = [< | #A | #B > ]
  
  Did you forget a \`|\` here? 

  Syntax error!
  parsing/errors/typeDef/polyvariant.js 7:15  
  5 │ type z = [< | #A | #B > ]
  6 │ 
  7 │ type rec t = []
  8 │ 
  9 │ 
  
  I'm not sure what to parse here when looking at \\"]\\".


========================================================"
`;

exports[`record.res 1`] = `
"=====Parsetree==========================================
type nonrec observation =
  {
  observed: int ;
  observer: [%napkinscript.typehole ] }
=====Errors=============================================

  Syntax error!
  parsing/errors/typeDef/record.res 4:1  
  2 │   observed: int,
  3 │   observer:
  4 │ }
  5 │ 
  
  I'm missing a type here


========================================================"
`;

exports[`typeDef.js 1`] = `
"=====Parsetree==========================================
type stack =
  | Empty 
type nonrec t = [%napkinscript.typehole ]
type nonrec state = [%napkinscript.typehole ]
=====Errors=============================================

  Syntax error!
  parsing/errors/typeDef/typeDef.js 1:15-2:3  
  1 │ type rec stack
  2 │   | Empty
  3 │ 
  4 │ // missing type
  
  Did you forget a \`=\` here? 

  Syntax error!
  parsing/errors/typeDef/typeDef.js 8:1-4  
  6 │ 
  7 │ // missing type
  8 │ type state =
  9 │ 
  
  Missing a type here

  Syntax error!
  parsing/errors/typeDef/typeDef.js 9:1  
  7 │ // missing type
  8 │ type state =
  9 │ 
  
  Missing a type here


========================================================"
`;

exports[`typeParams.js 1`] = `
"=====Parsetree==========================================
type nonrec 'a node = {
  _value: 'a Js.Nullable.value }
type nonrec ('from, 'to) derivedNode =
  {
  mutable value: 'to_ ;
  updateF: 'from -> 'to_ }
type nonrec ('from, ') derivedNode =
  {
  mutable value: 'to_ ;
  updateF: 'from -> 'to_ }
type nonrec ('from, ') derivedNode =
  {
  mutable value: 'to_ ;
  updateF: 'from -> 'to_ }
type nonrec ('from, 'foo) derivedNode =
  {
  mutable value: 'to_ ;
  updateF: 'from -> 'to_ }
=====Errors=============================================

  Syntax error!
  parsing/errors/typeDef/typeParams.js 1:10-13  
  1 │ type node('a) = {
  2 │   _value: Js.Nullable.value<'a>
  3 │ }
  
  Type parameters require angle brackets:
  node<'a>


  Syntax error!
  parsing/errors/typeDef/typeParams.js 5:26-27  
  3 │ }
  4 │ 
  5 │ type derivedNode<'from, 'to> = {
  6 │   mutable value: 'to_,
  7 │   updateF: 'from => 'to_,
  
  \`to\` is a reserved keyword. Keywords need to be escaped: \\\\\\"to\\"

  Syntax error!
  parsing/errors/typeDef/typeParams.js 10:26  
   8 │ }
   9 │ 
  10 │ type derivedNode<'from, '+> = {
  11 │   mutable value: 'to_,
  12 │   updateF: 'from => 'to_,
  
  A type param consists of a singlequote followed by a name like \`'a\` or \`'A\`

  Syntax error!
  parsing/errors/typeDef/typeParams.js 15:26  
  13 │ }
  14 │ 
  15 │ type derivedNode<'from, '_> = {
  16 │   mutable value: 'to_,
  17 │   updateF: 'from => 'to_,
  
  A type param consists of a singlequote followed by a name like \`'a\` or \`'A\`

  Syntax error!
  parsing/errors/typeDef/typeParams.js 21:25-27  
  19 │ 
  20 │ 
  21 │ type derivedNode<'from, foo> = {
  22 │   mutable value: 'to_,
  23 │   updateF: 'from => 'to_,
  
  Type params start with a singlequote: 'foo


========================================================"
`;
